hphp/test/slow/async/genva-variadic.php.expectf

Fatal error: do not use ...$args with genva() in %s/async/genva-variadic.php on line 5
